@@ -1,6 +1,6 @@
 /**********************************************************
  * expression parser
- * $Id: flagexp.y,v 1.16 2004/06/11 20:30:24 sisoft Exp $
+ * $Id: flagexp.y,v 1.17 2004/06/20 21:30:30 sisoft Exp $
  **********************************************************/
 %{
 #include "headers.h"
@@ -9,6 +9,7 @@
 #ifdef NEED_DEBUG
 #define YYERROR_VERBOSE 1
 #endif
+/*#define YYDEBUG 1*/
 
 #ifdef YYTEXT_POINTER
 extern char *yytext;
@@ -315,6 +316,9 @@ static int checkline(int lnum)
 int flagexp(slist_t *expr,int strict)
 {
 	char *p;
+#ifdef YYDEBUG
+	yydebug=1;
+#endif
 	for(;expr;expr=expr->next) {
 		DEBUG(('Y',1,"checkexpression: \"%s\"",expr->str));
 		p=xstrdup(expr->str);
